Update and refactor Dependency injection and configuration

--- a/src/Keda.Samples.Dotnet.OrderGenerator/appsettings.json
+++ b/src/Keda.Samples.Dotnet.OrderGenerator/appsettings.json
@@ -6,11 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
   "OrderQueueOptions": {
     "QueueName": "main",
     "AuthMode": "WorkloadIdentity",
-    "ConnectionString": "",
+    "ConnectionString": "test",
     "FullyQualifiedNamespace": "",
     "TenantId": "",
     "ClientId": "b96d264b-7053-4465-a4a7-32be5b0fec49",
