--- a/src/Keda.Samples.Dotnet.OrderProcessor/appsettings.json
+++ b/src/Keda.Samples.Dotnet.OrderProcessor/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "OrderQueueOptions": {
+    "QueueName": "main",
+    "AuthMode": "WorkloadIdentity",
+    "ConnectionString": "",
+    "FullyQualifiedNamespace": "",
+    "TenantId": "",
+    "ClientId": "b96d264b-7053-4465-a4a7-32be5b0fec49",
+    "ClientSecret": "",
   }
 }
