cleanup dependency injection

--- a/src/Keda.Samples.Dotnet.OrderProcessor/appsettings.json
+++ b/src/Keda.Samples.Dotnet.OrderProcessor/appsettings.json
@@ -8,11 +8,11 @@
   },
   "OrderQueueOptions": {
     "QueueName": "main",
-    "AuthMode": "WorkloadIdentity",
+    "AuthMode": "AzureDefaultCredential",
+    "FullyQualifiedNamespace": "rihag-deleteme-edc23.servicebus.windows.net",
     "ConnectionString": "",
-    "FullyQualifiedNamespace": "",
     "TenantId": "",
-    "ClientId": "b96d264b-7053-4465-a4a7-32be5b0fec49",
-    "ClientSecret": "",
+    "ClientId": "",
+    "ClientSecret": ""
   }
 }
