add support for appsettings.local.json

--- a/src/Keda.Samples.DotNet.Web/appsettings.json
+++ b/src/Keda.Samples.DotNet.Web/appsettings.json
@@ -8,9 +8,9 @@
   },
   "AllowedHosts": "*",
   "OrderQueueOptions": {
-    "QueueName": "main",
+    "QueueName": "orders",
     "AuthMode": "AzureDefaultCredential",
-    "FullyQualifiedNamespace": "rihag-deleteme-edc23.servicebus.windows.net",
+    "FullyQualifiedNamespace": "<SERVICE-BUS-NAME>.servicebus.windows.net",
     "ConnectionString": "",
     "TenantId": "",
     "ClientId": "",
