--- a/src/Keda.Samples.Dotnet.OrderProcessor/appsettings.json
+++ b/src/Keda.Samples.Dotnet.OrderProcessor/appsettings.json
@@ -6,10 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AllowedHosts": "*",
   "OrderQueueOptions": {
-    "QueueName": "main",
+    "QueueName": "orders",
     "AuthMode": "AzureDefaultCredential",
-    "FullyQualifiedNamespace": "rihag-deleteme-edc23.servicebus.windows.net",
+    "FullyQualifiedNamespace": "<SERVICE-BUS-NAME>.servicebus.windows.net",
     "ConnectionString": "",
     "TenantId": "",
     "ClientId": "",
