--- a/src/Keda.Samples.Dotnet.OrderProcessor/appsettings.json
+++ b/src/Keda.Samples.Dotnet.OrderProcessor/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "OrderQueueOptions": {
     "QueueName": "orders",
-    "AuthMode": "AzureDefaultCredential",
+    "AuthMode": "ConnectionString",
     "FullyQualifiedNamespace": "<SERVICE-BUS-NAME>.servicebus.windows.net",
     "ConnectionString": "",
     "TenantId": "",
