--- a/radixconfig.yaml
+++ b/radixconfig.yaml
@@ -11,7 +11,7 @@ spec:
   components:
     - name: web
       src: src
-      dockerfileName: src/Keda.Samples.DotNet.Web/Dockerfile
+      dockerfileName: src/Dockerfile.Web
 
       # Workload Identity for the running application:
       identity:
@@ -32,7 +32,7 @@ spec:
 
     - name: processor
       src: src
-      dockerfileName: src/Keda.Samples.DotNet.Processor/Dockerfile
+      dockerfileName: src/Dockerfile.Processor
 
       # Workload Identity for the running application:
       identity:
