--- a/src/Dockerfile.Web
+++ b/src/Dockerfile.Web
@@ -18,4 +18,5 @@ RUN dotnet publish "Keda.Samples.DotNet.Web.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+USER 1000
 ENTRYPOINT ["dotnet", "Keda.Samples.DotNet.Web.dll"]
