--- a/src/Dockerfile.Web
+++ b/src/Dockerfile.Web
@@ -1,8 +1,3 @@
-FROM mcr.microsoft.com/dotnet/runtime:8.0 AS base
-WORKDIR /app
-EXPOSE 80
-EXPOSE 443
-
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 COPY ["Keda.Samples.DotNet.Web/Keda.Samples.DotNet.Web.csproj", "Keda.Samples.DotNet.Web/"]
@@ -15,8 +10,11 @@ RUN dotnet build "Keda.Samples.DotNet.Web.csproj" -c Release -o /app/build
 FROM build AS publish
 RUN dotnet publish "Keda.Samples.DotNet.Web.csproj" -c Release -o /app/publish
 
-FROM base AS final
+
+FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 COPY --from=publish /app/publish .
+
+EXPOSE 8080
 USER 1000
 ENTRYPOINT ["dotnet", "Keda.Samples.DotNet.Web.dll"]
