--- a/src/Radix.Samples.DotNet.Web/Radix.Samples.DotNet.Web.csproj
+++ b/src/Radix.Samples.DotNet.Web/Radix.Samples.DotNet.Web.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>858adc6c-c378-4698-a3c4-1112a29d6561</UserSecretsId>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <RootNamespace>Keda.Samples.DotNet.Web</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Keda.Samples.Dotnet.Contracts\Keda.Samples.Dotnet.Contracts.csproj" />
+    <ProjectReference Include="..\Radix.Samples.Dotnet.Contracts\Radix.Samples.Dotnet.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
