--- a/src/Radix.Samples.Dotnet.OrderProcessor/appsettings.json
+++ b/src/Radix.Samples.Dotnet.OrderProcessor/appsettings.json
@@ -9,11 +9,6 @@
   "AllowedHosts": "*",
   "OrderQueueOptions": {
     "QueueName": "orders",
-    "AuthMode": "ConnectionString",
-    "FullyQualifiedNamespace": "<SERVICE-BUS-NAME>.servicebus.windows.net",
-    "ConnectionString": "",
-    "TenantId": "",
-    "ClientId": "",
-    "ClientSecret": ""
+    "FullyQualifiedNamespace": "<SERVICE-BUS-NAME>.servicebus.windows.net"
   }
 }
