--- a/src/Dockerfile.Processor
+++ b/src/Dockerfile.Processor
@@ -1,17 +1,17 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
-COPY ["Keda.Samples.Dotnet.OrderProcessor/Keda.Samples.Dotnet.OrderProcessor.csproj", "Keda.Samples.Dotnet.OrderProcessor/"]
-COPY ["Keda.Samples.Dotnet.Contracts/Keda.Samples.Dotnet.Contracts.csproj", "Keda.Samples.Dotnet.Contracts/"]
-RUN dotnet restore "Keda.Samples.Dotnet.OrderProcessor/Keda.Samples.Dotnet.OrderProcessor.csproj"
+COPY ["Radix.Samples.Dotnet.OrderProcessor/Radix.Samples.Dotnet.OrderProcessor.csproj", "Radix.Samples.Dotnet.OrderProcessor/"]
+COPY ["Radix.Samples.Dotnet.Contracts/Radix.Samples.Dotnet.Contracts.csproj", "Radix.Samples.Dotnet.Contracts/"]
+RUN dotnet restore "Radix.Samples.Dotnet.OrderProcessor/Radix.Samples.Dotnet.OrderProcessor.csproj"
 COPY . .
-WORKDIR "/src/Keda.Samples.Dotnet.OrderProcessor"
-RUN dotnet build "Keda.Samples.Dotnet.OrderProcessor.csproj" -c Release -o /app
+WORKDIR "/src/Radix.Samples.Dotnet.OrderProcessor"
+RUN dotnet build "Radix.Samples.Dotnet.OrderProcessor.csproj" -c Release -o /app
 
 FROM build AS publish
-RUN dotnet publish "Keda.Samples.Dotnet.OrderProcessor.csproj" -c Release -o /app
+RUN dotnet publish "Radix.Samples.Dotnet.OrderProcessor.csproj" -c Release -o /app
 
 FROM mcr.microsoft.com/dotnet/runtime:8.0
 WORKDIR /app
 COPY --from=publish /app .
 USER 1000
-ENTRYPOINT ["dotnet", "Keda.Samples.Dotnet.OrderProcessor.dll"]
+ENTRYPOINT ["dotnet", "Radix.Samples.Dotnet.OrderProcessor.dll"]
