--- a/src/Dockerfile.Web
+++ b/src/Dockerfile.Web
@@ -1,14 +1,14 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
-COPY ["Keda.Samples.DotNet.Web/Keda.Samples.DotNet.Web.csproj", "Keda.Samples.DotNet.Web/"]
-COPY ["Keda.Samples.Dotnet.Contracts/Keda.Samples.Dotnet.Contracts.csproj", "Keda.Samples.Dotnet.Contracts/"]
-RUN dotnet restore "Keda.Samples.DotNet.Web/Keda.Samples.DotNet.Web.csproj"
+COPY ["Radix.Samples.DotNet.Web/Radix.Samples.DotNet.Web.csproj", "Radix.Samples.DotNet.Web/"]
+COPY ["Radix.Samples.Dotnet.Contracts/Radix.Samples.Dotnet.Contracts.csproj", "Radix.Samples.Dotnet.Contracts/"]
+RUN dotnet restore "Radix.Samples.DotNet.Web/Radix.Samples.DotNet.Web.csproj"
 COPY . .
-WORKDIR "/src/Keda.Samples.DotNet.Web"
-RUN dotnet build "Keda.Samples.DotNet.Web.csproj" -c Release -o /app/build
+WORKDIR "/src/Radix.Samples.DotNet.Web"
+RUN dotnet build "Radix.Samples.DotNet.Web.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Keda.Samples.DotNet.Web.csproj" -c Release -o /app/publish
+RUN dotnet publish "Radix.Samples.DotNet.Web.csproj" -c Release -o /app/publish
 
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
@@ -17,4 +17,4 @@ COPY --from=publish /app/publish .
 
 EXPOSE 8080
 USER 1000
-ENTRYPOINT ["dotnet", "Keda.Samples.DotNet.Web.dll"]
+ENTRYPOINT ["dotnet", "Radix.Samples.DotNet.Web.dll"]
