--- a/src/Radix.Samples.Dotnet.OrderProcessor/Radix.Samples.Dotnet.OrderProcessor.csproj
+++ b/src/Radix.Samples.Dotnet.OrderProcessor/Radix.Samples.Dotnet.OrderProcessor.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <LangVersion>12</LangVersion>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <RootNamespace>Keda.Samples.Dotnet.OrderProcessor</RootNamespace>
+    <RootNamespace>Radix.Samples.Dotnet.OrderProcessor</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
