--- a/src/Radix.Samples.DotNet.Web/Radix.Samples.DotNet.Web.csproj
+++ b/src/Radix.Samples.DotNet.Web/Radix.Samples.DotNet.Web.csproj
@@ -7,7 +7,7 @@
     <UserSecretsId>858adc6c-c378-4698-a3c4-1112a29d6561</UserSecretsId>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <RootNamespace>Keda.Samples.DotNet.Web</RootNamespace>
+    <RootNamespace>Radix.Samples.DotNet.Web</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
