--- a/src/Dockerfile.Web
+++ b/src/Dockerfile.Web
@@ -1,4 +1,4 @@
-FROM cgr.dev/chainguard/dotnet-sdk:latest AS build
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 COPY ["Radix.Samples.DotNet.Web/Radix.Samples.DotNet.Web.csproj", "Radix.Samples.DotNet.Web/"]
 COPY ["Radix.Samples.Dotnet.Contracts/Radix.Samples.Dotnet.Contracts.csproj", "Radix.Samples.Dotnet.Contracts/"]
@@ -11,7 +11,7 @@ FROM build AS publish
 RUN dotnet publish "Radix.Samples.DotNet.Web.csproj" -c Release -o /app/publish
 
 
-FROM cgr.dev/chainguard/aspnet-runtime:latest
+FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 COPY --from=publish /app/publish .
 
