--- a/src/Radix.Samples.DotNet.Web/appsettings.json
+++ b/src/Radix.Samples.DotNet.Web/appsettings.json
@@ -9,6 +9,6 @@
   "AllowedHosts": "*",
   "OrderQueueOptions": {
     "QueueName": "orders",
-    "FullyQualifiedNamespace": "<SERVICE-BUS-NAME>.servicebus.windows.net"
+    "FullyQualifiedNamespace": "rihag-deleteme-edc23.servicebus.windows.net"
   }
 }
