--- a/radixconfig.yaml
+++ b/radixconfig.yaml
@@ -13,8 +13,8 @@ spec:
   components:
     - name: web
       src: src
-      runtime:
-        architecture: arm64
+#      runtime:
+#        architecture: arm64
       dockerfileName: Dockerfile.Web
 
       # Workload Identity for the running application:
@@ -39,8 +39,8 @@ spec:
     - name: processor
       src: src
       dockerfileName: Dockerfile.Processor
-      runtime:
-        architecture: arm64
+#      runtime:
+#        architecture: arm64
 
       # Workload Identity for the running application:
       identity:
