--- a/radixconfig.yaml
+++ b/radixconfig.yaml
@@ -5,7 +5,7 @@ metadata:
   name: radix-keda-sample
 spec:
   environments:
-    - name: prod
+    - name: dev
       build:
         from: main
   build:
@@ -20,7 +20,7 @@ spec:
       # Workload Identity for the running application:
       identity:
         azure:
-          clientId: c2f17b62-7c2f-4541-acbc-22d7cfc66e0b
+          clientId: 00000000-0000-0000-0000-000000000000
 
       horizontalScaling:
         # defaults to using CPU scaling with 80% target utilization, and min 1 replica
@@ -33,7 +33,7 @@ spec:
 
       variables:
         ASPNETCORE_ENVIRONMENT: Development
-        OrderQueueOptions__FullyQualifiedNamespace: rihag-deleteme-edc23.servicebus.windows.net
+        OrderQueueOptions__FullyQualifiedNamespace: <Your service bus namespace>.servicebus.windows.net
         OrderQueueOptions__QueueName: orders
 
     - name: processor
@@ -45,11 +45,11 @@ spec:
       # Workload Identity for the running application:
       identity:
         azure:
-          clientId: c2f17b62-7c2f-4541-acbc-22d7cfc66e0b
+          clientId: 00000000-0000-0000-0000-000000000000
 
       variables:
         ASPNETCORE_ENVIRONMENT: Development
-        OrderQueueOptions__FullyQualifiedNamespace: rihag-deleteme-edc23.servicebus.windows.net
+        OrderQueueOptions__FullyQualifiedNamespace: <Your service bus namespace>.servicebus.windows.net
         OrderQueueOptions__QueueName: orders
 
 
@@ -59,7 +59,7 @@ spec:
         triggers:
          - name: azuresb
            azureServiceBus:
-             namespace: rihag-deleteme-edc23 #.servicebus.windows.net
+             namespace: <Your service bus namespace> #.servicebus.windows.net
              queueName: orders
              messageCount: 2
 
@@ -67,4 +67,4 @@ spec:
              authentication:
                identity:
                  azure:
-                   clientId: c2f17b62-7c2f-4541-acbc-22d7cfc66e0b
+                   clientId: 00000000-0000-0000-0000-000000000000
