--- a/src/Radix.Samples.Dotnet.OrderGenerator/appsettings.json
+++ b/src/Radix.Samples.Dotnet.OrderGenerator/appsettings.json
@@ -9,6 +9,6 @@
   "AllowedHosts": "*",
   "OrderQueueOptions": {
     "QueueName": "orders",
-    "FullyQualifiedNamespace": "rihag-deleteme-edc23.servicebus.windows.net"
+    "FullyQualifiedNamespace": "<Your service bus namespace>.servicebus.windows.net"
   }
 }
